welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:4: error: value =< is not a member of Int
    case true => return ((n=<1)||(n>=10))
                           ^